k8s/production/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: ns-data

spec:
  type: ClusterIP

  selector:
    app: postgresql

  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
