k8s/production/petclinic-harbor-alias.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": {
    "name": "petclinic-harbor-alias",
    "namespace": "harbor"
  },
  "spec": {
    "ingressClassName": "traefik",
    "rules": [
      {
        "host": "harbor.devops.local",
        "http": {
          "paths": [
            {
              "backend": {
                "service": {
                  "name": "harbor-core",
                  "port": {
                    "number": 80
                  }
                }
              },
              "path": "/api/",
              "pathType": "Prefix"
            },
            {
              "backend": {
                "service": {
                  "name": "harbor-core",
                  "port": {
                    "number": 80
                  }
                }
              },
              "path": "/service/",
              "pathType": "Prefix"
            },
            {
              "backend": {
                "service": {
                  "name": "harbor-core",
                  "port": {
                    "number": 80
                  }
                }
              },
              "path": "/v2/",
              "pathType": "Prefix"
            },
            {
              "backend": {
                "service": {
                  "name": "harbor-core",
                  "port": {
                    "number": 80
                  }
                }
              },
              "path": "/c/",
              "pathType": "Prefix"
            },
            {
              "backend": {
                "service": {
                  "name": "harbor-portal",
                  "port": {
                    "number": 80
                  }
                }
              },
              "path": "/",
              "pathType": "Prefix"
            }
          ]
        }
      }
    ]
  }
}
